--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,10 +106,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-    "paths":{
-      "@models/*": ["./models/*"]  // Si tienes una estructura con modelos
-    }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
