--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -36,9 +39,6 @@
     "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
     "@types/sequelize": "^4.28.20",
-    "nodemon": "^3.1.7",
-    "sequelize-cli": "^6.6.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
