--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,10 @@
   "builds": [
     {
       "src": "src/index.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
-  ],
-  "outputDirectory": "dist" 
+  ]
 }
