--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2",
-    "ts-node": "^10.9.2"
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -39,6 +38,7 @@
     "@types/pg": "^8.11.10",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
